{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "953a5f11-6fcd-43dc-9cc1-e1b1932a7829",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2174af6f-fa0c-4e0e-a5d0-3cac5c3d27e6",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JoyStick",
                    "type": "Value",
                    "id": "05493d85-634e-4269-977f-c9d1c618bcdc",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "2252a68d-70c7-47b6-af50-b2568c3eb42b",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ca2ae09e-1bb9-4df0-8dad-9c6bb96b9af6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f4aadb72-4a64-46fc-9f14-6ab9536be88a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ba3a2c56-1323-4736-bbe8-e7a152cec555",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "95aac91f-8093-4122-b375-42c9f27a3956",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "74c50279-cc97-49d2-8def-2f6c5762b9de",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "7f435cd6-d43f-430a-ab08-bb85544b7f7a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1dc7ae6a-1f6d-4056-b535-ed66c4796de6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoyStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "3D Vector",
                    "id": "b2bf9e8c-2fa5-4e59-85fe-c62a58320855",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoyStick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6ae3680b-76ed-4e7b-a04b-23707b2450d1",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoyStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "71298ae1-d199-4678-b142-0c564c79eddd",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoyStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1316adea-5956-483e-af11-dc4e4b61e0c5",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoyStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d7e36bb9-7192-49b4-b469-82f32b88ad85",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoyStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "9cc74dc0-a81f-4dd3-a04f-63c5b086e720",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoyStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "1e463200-bbf3-466c-b2d5-c1c2142586d9",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoyStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}